chore: config jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "standard-with-typescript",
-  "parseOptions": {
+  "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
