--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "esnext"
     ],
     "esModuleInterop": true,
-    "module": "exnext",
+    "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
     "rootDir": "src",
@@ -18,7 +18,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true
   },
   "include": [
