chore: add configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,13 @@
 {
-  "extends": "standard-with-typescript",
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "extends": [
+    "standard-with-typescript",
+    "plugin:react/recommended"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
