--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "jest": "^26.4.0",
     "lint-staged": "^10.2.11",
     "ts-jest": "^26.2.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.20.0",
