--- a/package.json
+++ b/package.json
@@ -8,51 +8,52 @@
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
+    "test:ci": "npm test -- --coverage",
+    "check": "npm-check -u -s"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@testing-library/react": "^11.0.1",
+    "@testing-library/react": "^11.1.1",
     "@types/axios": "^0.14.0",
-    "@types/faker": "^4.1.12",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.47",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@types/faker": "^5.1.4",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.2",
-    "eslint": "^7.6.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "^2.22.0",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.13.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-standard": "^4.0.1",
-    "faker": "^4.1.0",
-    "git-commit-msg-linter": "^2.4.4",
-    "husky": "^4.2.5",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.0.2",
+    "faker": "^5.1.0",
+    "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.4.0",
+    "jest": "^26.6.3",
     "jest-localstorage-mock": "^2.4.3",
-    "lint-staged": "^10.2.11",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.1",
-    "style-loader": "^1.2.1",
-    "ts-jest": "^26.2.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
+    "lint-staged": "^10.5.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.3",
+    "ts-loader": "^8.0.10",
+    "typescript": "^4.0.5",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
-    "axios": "^0.20.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "axios": "^0.21.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   }
 }
