--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.5.0",
+    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.1.1",
     "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.4",
