--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "cypress": "^6.1.0",
     "eslint": "^7.13.0",
@@ -41,6 +42,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-standard": "^4.0.2",
     "faker": "^5.1.0",
+    "full-icu": "^1.3.1",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
