--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,8 @@
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-redeclare": "off",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error"
+    "import/export": "off",
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-namespace": "off"
   }
 }
